fix workflow file

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,8 @@ on:
     tags:
       - '*'
     branches:
-      - '**'
+      - main
+      - development
   pull_request:
     branches:
       - development
